<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_home" >

    <EditText
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:ems="10"
        android:hint="@string/mail"
        android:inputType="textEmailAddress"
        android:textColor="#ff6600" />

    <EditText
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/email"
        android:layout_alignLeft="@+id/email"
        android:layout_alignRight="@+id/email"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textAutoCorrect"
        android:textColor="#ff6600" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/email"
        android:layout_alignRight="@+id/email"
        android:layout_below="@+id/email"
        android:ems="10"
        android:hint="@string/mdp"
        android:inputType="textPassword"
        android:textColor="#ff6600" />

    <EditText
        android:id="@+id/check_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/password"
        android:layout_alignRight="@+id/password"
        android:layout_below="@+id/password"
        android:ems="10"
        android:hint="@string/mdp2"
        android:inputType="textPassword"
        android:textColor="#ff6600" />

    <Button
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/check_password"
        android:layout_alignRight="@+id/check_password"
        android:layout_below="@+id/check_password"
        android:text="@string/go"
        android:textColor="#ff6600"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/connection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/login"
        android:textColor="#ff6600"
        android:textSize="15sp" />

</RelativeLayout>