<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/nameList"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="190dp"
        android:ems="10"
        android:hint="@string/listname"
        android:inputType="textCapSentences|textAutoCorrect"
        android:maxLines="1"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/shareTxt"
        android:contentDescription="@string/share"
        android:src="@drawable/add_people" />

    <TextView
        android:id="@+id/shareTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@+id/imageView1"
        android:layout_toRightOf="@+id/imageView1"
        android:ems="10"
        android:hint="@string/sharetxt"
        android:textColorHint="#ff6600" />

    <EditText
        android:id="@+id/mailFriend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/shareTxt"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/shareTxt"
        android:ems="10"
        android:hint="@string/mailFriend"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/saveList"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:text="@string/save" />

</RelativeLayout>